Minor CSS fix to modal wrap

--- a/app/assets/stylesheets/screen.css.styl
+++ b/app/assets/stylesheets/screen.css.styl
@@ -524,7 +524,7 @@ a.btn:hover
   min-height 100%
   height auto !important
   height 100%
-  position absolute
+  position fixed
   top 0
   left 0
   background transparent
